AUTHX-34 Change /employee-id endpoint to /ehid
